syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufDetailStyle";

import "detail/color.proto";

message DetailStyle {
  Color color = 1;
  int32 strokeWeight = 2;
  int32 strokeColor = 3;
  int32 fillColor = 4;
}
